Fix spacing of the buttons (#5737)

--- a/interface/web/themes/default/assets/stylesheets/ispconfig.css
+++ b/interface/web/themes/default/assets/stylesheets/ispconfig.css
@@ -128,6 +128,10 @@ body {
   .btn-group-justified .btn:last-of-type {
     border-right-width: 1px; }
 
+.btn {
+  margin-top: 3px;
+}
+
 #content {
   width: 78%; }
 
